crates/togi/tests/snapshots/cli__help_format.snap
---
source: crates/togi/tests/cli.rs
expression: "help_output(& [\"format\", \"--help\"])"
---
Format project files in place (R, Python, Quarto, SQL, Markdown)

Discovers files from the given paths (or the whole project when none are given), routes each to its formatter behind one interface, and rewrites them in place. Pass --check to report what would change without touching anything (exit 1 when formatting is needed). Respects .gitignore, the `[format]` config, and any per-tool config the project already has (air.toml, ruff.toml, .sqlfluff).

Usage: togi format [OPTIONS] [PATHS]...

Arguments:
  [PATHS]...
          Files or directories to format (default: the whole project)

Options:
      --check
          Report the files that would change without rewriting anything (exit 1 when formatting is needed)

      --with-version <VERSION>
          Run using an exact togi release for this invocation

  -v, --verbose
          Show more detail (underlying commands, tool names)

  -q, --quiet
          Suppress all output except errors

      --no-color
          Disable colored output

      --config <PATH>
          Use this config file instead of discovering togi.toml

  -h, --help
          Print help (see a summary with '-h')
