crates/togi/tests/snapshots/cli__help_pin.snap
---
source: crates/togi/tests/cli.rs
expression: "help_output(& [\"pin\", \"--help\"])"
---
Pin this project to an exact togi release

Usage: togi pin [OPTIONS] [VERSION]

Arguments:
  [VERSION]  Exact released version to select (default: the effective version)

Options:
      --with-version <VERSION>  Run using an exact togi release for this invocation
  -v, --verbose                 Show more detail (underlying commands, tool names)
  -q, --quiet                   Suppress all output except errors
      --no-color                Disable colored output
      --config <PATH>           Use this config file instead of discovering togi.toml
  -h, --help                    Print help
