crates/togi/tests/snapshots/cli__help_upgrade.snap
---
source: crates/togi/tests/cli.rs
expression: "help_output(& [\"upgrade\", \"--help\"])"
---
Upgrade togi to the latest release

Downloads the latest release for your platform and replaces the running binary in place. Does nothing if you already have the latest version.

Usage: togi upgrade [OPTIONS]

Options:
      --with-version <VERSION>
          Run using an exact togi release for this invocation

  -v, --verbose
          Show more detail (underlying commands, tool names)

  -q, --quiet
          Suppress all output except errors

      --no-color
          Disable colored output

      --config <PATH>
          Use this config file instead of discovering togi.toml

  -h, --help
          Print help (see a summary with '-h')
