crates/togi/tests/snapshots/cli__help_version.snap
---
source: crates/togi/tests/cli.rs
expression: "help_output(& [\"version\", \"--help\"])"
---
Print the togi version and the tool versions baked into this release

The first line matches `togi --version`; the rest name the default version of each managed tool this release installs.

Usage: togi version [OPTIONS]

Options:
      --with-version <VERSION>
          Run using an exact togi release for this invocation

  -v, --verbose
          Show more detail (underlying commands, tool names)

  -q, --quiet
          Suppress all output except errors

      --no-color
          Disable colored output

      --config <PATH>
          Use this config file instead of discovering togi.toml

  -h, --help
          Print help (see a summary with '-h')
